# autoshop

./: .gitignore  Autoshop-UI.bat  Cargo.toml  LICENSE  README.md  build.rs  serve-web.cmd
docs/: ARCHITECTURE.md  M1_PLAN.md  ROADMAP.md  V2_PLAN.md
python/: denoise.py  segment.py
src/: config.rs  decode.rs  denoise.rs  eval.rs  fit.rs  fit_zoned.rs  generative.rs  lib.rs  main.rs  openai_models.rs  pipeline.rs  recipe.rs  render.rs  retouch.rs  segment.rs  serve.rs  style.rs  xmp.rs
src/advisor/: claude.rs  heuristic.rs  mod.rs  openai.rs  openai_verify.rs
src/web/: index.html
