[package]
name = "autoshop"
version = "0.1.0"
edition = "2024"
description = "AI-assisted automatic development of RAW photographs (EditRecipe + deterministic Rust render, XMP sidecar, AI denoise)"
license = "MIT"
repository = "https://github.com/skymanbp/autoshop"
readme = "README.md"

# Shared engine library — linked by both front-ends.
[lib]
name = "autoshop"
path = "src/lib.rs"

# CLI front-end (the original binary).
[[bin]]
name = "autoshop"
path = "src/main.rs"

# Native desktop GUI (egui/eframe). Behind the `gui` feature so a plain
# `cargo build` / `cargo test` does NOT pull in eframe + winit + the GL stack;
# build it with `cargo run --features gui --bin autoshop-gui`.
[[bin]]
name = "autoshop-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[features]
gui = ["dep:eframe", "dep:egui", "dep:rfd"]

[dependencies]
anyhow = "1.0.103"
base64 = "0.22"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
rawler = "0.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tiny_http = "0.12.0"
ureq = { version = "2", features = ["json"] }

# --- native GUI (optional; enabled by the `gui` feature) -------------------
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
rfd = { version = "0.15", optional = true }
